grammar.js
		sql_stmt_list: ($) =>
			seq(optional($.sql_stmt), repeat(seq(";", optional($.sql_stmt)))),

		/// keyword

		...generateKeyword([
			"ABORT",
			"ACTION",
			"ADD",
			"AFTER",
			"ALL",
			"ALTER",
			"ALWAYS",
			"ANALYZE",
			"AND",
			"AS",
			"ASC",
			"ATTACH",
			"AUTOINCREMENT",
			"BEFORE",
			"BEGIN",
			"BETWEEN",
			"BY",
			"CASCADE",
			"CASE",
			"CAST",
			"CHECK",
			"COLLATE",
			"COLUMN",
			"COMMIT",
			"CONFLICT",
			"CONSTRAINT",
			"CREATE",
			"CROSS",
			"CURRENT",
			"CURRENT_DATE",
			"CURRENT_TIME",
			"CURRENT_TIMESTAMP",
			"DATABASE",
			"DEFAULT",
			"DEFERRABLE",
			"DEFERRED",
			"DELETE",
			"DESC",
			"DETACH",
			"DISTINCT",
			"DO",
			"DROP",
			"EACH",
			"ELSE",
			"END",
			"ESCAPE",
			"EXCEPT",
			"EXCLUDE",
			"EXCLUSIVE",
			"EXISTS",
			"EXPLAIN",
			"FAIL",
			"FALSE",
			"FILTER",
			"FIRST",
			"FOLLOWING",
			"FOR",
			"FOREIGN",
			"FROM",
			"FULL",
			"GENERATED",
			"GLOB",
			"GROUP",
			"GROUPS",
			"HAVING",
			"IF",
			"IGNORE",
			"IMMEDIATE",
			"IN",
			"INDEX",
			"INDEXED",
			"INITIALLY",
			"INNER",
			"INSERT",
			"INSTEAD",
			"INTERSECT",
			"INTO",
			"IS",
			"ISNULL",
			"JOIN",
			"KEY",
			"LAST",
			"LEFT",
			"LIKE",
			"LIMIT",
			"MATCH",
			"MATERIALIZED",
			"NATURAL",
			"NO",
			"NOT",
			"NOTHING",
			"NOTNULL",
			"NULL",
			"NULLS",
			"OF",
			"OFFSET",
			"ON",
			"OR",
			"ORDER",
			"OTHERS",
			"OUTER",
			"OVER",
			"PARTITION",
			"PLAN",
			"PRAGMA",
			"PRECEDING",
			"PRIMARY",
			"QUERY",
			"RAISE",
			"RANGE",
			"RECURSIVE",
			"REFERENCES",
			"REGEXP",
			"REINDEX",
			"RELEASE",
			"RENAME",
			"REPLACE",
			"RESTRICT",
			"RETURNING",
			"RIGHT",
			"ROLLBACK",
			"ROW",
			"ROWID",
			"ROWS",
			"SAVEPOINT",
			"SELECT",
			"SET",
			"STORED",
			"STRICT",
			"TABLE",
			"TEMP",
			"TEMPORARY",
			"THEN",
			"TIES",
			"TO",
			"TRANSACTION",
			"TRIGGER",
			"TRUE",
			"UNBOUNDED",
			"UNION",
			"UNIQUE",
			"UPDATE",
			"USING",
			"VACUUM",
			"VALUES",
			"VIEW",
			"VIRTUAL",
			"WHEN",
			"WHERE",
			"WINDOW",
			"WITH",
			"WITHOUT",
		]),

		/// token

		numeric_literal: ($) => {
			const decimal_digit = /[0-9]+/
			const exponent_part = seq(
				choice("e", "E"),
				optional(choice("-", "+")),
				decimal_digit,
			)
			const decimal_integer_literal = choice(
				"0",
				seq(/[1-9]/, optional(decimal_digit)),
			)
			const decimal_literal = choice(
				seq(
					decimal_integer_literal,
					optional(seq(".", optional(decimal_digit))),
					optional(exponent_part),
				),
				seq(".", optional(decimal_digit), optional(exponent_part)),
			)

			const hex_literal = seq(choice("0x", "0X"), /[0-9a-fA-F]+/)

			return token(choice(decimal_literal, hex_literal))
		},

		identifier: ($) =>
			choice(
				/[_a-zA-Z\x80-\xFF][$_0-9a-zA-Z\x80-\xFF]*/,
				seq('"', /(""|[^"])*/, '"'),
				seq("`", /(``|[^`])*/, "`"),
				seq("[", /[^\]]*/, "]"),
			),

		sql_stmt: ($) =>
			seq(
				optional(seq($.EXPLAIN, optional(seq($.QUERY, $.PLAN)))),
				choice(
					$.alter_table_stmt,
					$.analyze_stmt,
					$.attach_stmt,
					$.begin_stmt,
					$.commit_stmt,
					$.create_index_stmt,
					$.create_table_stmt,
					$.create_trigger_stmt,
					$.create_view_stmt,
					$.create_virtual_table_stmt,
					$.delete_stmt,
					$.detach_stmt,
					$.drop_index_stmt,
					$.drop_table_stmt,
					$.drop_trigger_stmt,
					$.drop_view_stmt,
					$.insert_stmt,
					$.pragma_stmt,
					$.reindex_stmt,
					$.release_stmt,
					$.rollback_stmt,
					$.savepoint_stmt,
					$.select_stmt,
					$.update_stmt,
					$.vacuum_stmt,
				),
			),

		analyze_stmt: ($) => seq($.ANALYZE, optional(field("name", $._name2))),

		insert_stmt: ($) =>
			seq(
				optional(field("with", $.with_clause)),
				choice(
					$.REPLACE,
					seq(
						$.INSERT,
						optional(
							seq(
								$.OR,
								choice(
									$.ABORT,
									$.FAIL,
									$.IGNORE,
									$.REPLACE,
									$.ROLLBACK,
								),
							),
						),
					),
				),
				$.INTO,
				field("table", $._name2),
				optional(seq($.AS, field("alias", $._name))),
				optional(seq("(", commaSep($._name), ")")),
				choice(
					seq(
						$.VALUES,
						commaSep(seq("(", commaSep($._expr), ")")),
						optional($.upsert_clause),
					),
					seq($.select_stmt, optional($.upsert_clause)),
					seq($.DEFAULT, $.VALUES),
				),
				optional($.returning_clause),
			),

		select_stmt: ($) =>
			seq(
				optional(field("with", $.with_clause)),
				$.select_core,
				repeat(seq($.compound_operator, $.select_core)),
				optional($.order_by_clause),
				optional($.limit_clause),
			),

		_name: ($) => choice($.string_literal, $.identifier),

		_name2: ($) => seq(optional(seq($._name, ".")), $._name),

		_expr: ($) =>
			choice(
				$._literal_value,
				$.bind_parameter,
				$._name,
				seq($._name, ".", $._name),
				seq($._name, ".", $._name, ".", $._name),
				prec.right("unary_bitnot", seq("~", $._expr)),
				prec.right("unary_plus", seq(choice("-", "+"), $._expr)),
				prec.right("unary_not", seq($.NOT, $._expr)),
				prec.left("binary_concat", seq($._expr, "||", $._expr)),
				prec.left("binary_concat", seq($._expr, "->", $._expr)),
				prec.left("binary_concat", seq($._expr, "->>", $._expr)),
				prec.left(
					"binary_times",
					seq($._expr, choice("*", "/", "%"), $._expr),
				),
				prec.left(
					"binary_plus",
					seq($._expr, choice("+", "-"), $._expr),
				),
				prec.left(
					"binary_bitwise",
					seq($._expr, choice("<<", ">>", "&", "|"), $._expr),
				),
				prec.left(
					"binary_compare",
					seq($._expr, choice("<", "<=", ">", ">="), $._expr),
				),
				prec.left(
					"binary_relation",
					seq($._expr, choice("=", "==", "!=", "<>"), $._expr),
				),
				seq(
					$._expr,
					optional($.NOT),
					$.IN,
					choice(
						seq(
							"(",
							optional(choice($.select_stmt, commaSep($._expr))),
							")",
						),
						seq(
							$._name2,
							optional(
								seq("(", optional(commaSep($._expr)), ")"),
							),
						),
					),
				),
				prec.left("binary_and", seq($._expr, $.AND, $._expr)),
				prec.left("binary_or", seq($._expr, $.OR, $._expr)),
				seq(
					$.function_name,
					"(",
					optional(
						choice(
							seq(optional($.DISTINCT), commaSep($._expr)),
							"*",
						),
					),
					")",
					optional($.filter_clause),
					optional($.over_clause),
				),
				seq("(", commaSep($._expr), ")"),
				seq($.CAST, "(", $._expr, $.AS, $.type_name, ")"),
				prec("expr_collate", seq($._expr, $.COLLATE, $.collation_name)),
				prec.left(
					"binary_relation",
					seq(
						$._expr,
						optional($.NOT),
						choice($.LIKE, $.GLOB, $.REGEXP, $.MATCH),
						$._expr,
						optional(seq($.ESCAPE, $._expr)),
					),
				),
				seq($._expr, choice($.ISNULL, $.NOTNULL, seq($.NOT, $.NULL))),
				prec.left(
					"binary_relation",
					seq(
						$._expr,
						$.IS,
						optional($.NOT),
						optional(seq($.DISTINCT, $.FROM)),
						$._expr,
					),
				),
				prec.left(
					"binary_relation",
					seq(
						$._expr,
						optional($.NOT),
						$.BETWEEN,
						$._expr,
						$.AND,
						$._expr,
					),
				),
				seq("(", $.select_stmt, ")"),
				prec("expr_exists", seq($.EXISTS, "(", $.select_stmt, ")")),
				prec(
					"expr_not_exists",
					seq($.NOT, $.EXISTS, "(", $.select_stmt, ")"),
				),
				seq(
					$.CASE,
					optional($._expr),
					repeat1(seq($.WHEN, $._expr, $.THEN, $._expr)),
					optional(seq($.ELSE, $._expr)),
					$.END,
				),
				$.raise_function,
			),

		select_core: ($) =>
			choice(
				seq(
					$.SELECT,
					optional(choice($.DISTINCT, $.ALL)),
					commaSep($.result_column),
					optional($.from_clause),
					optional($.where_clause),
					optional($.group_by_clause),
					optional($.window_clause),
				),
				seq($.VALUES, commaSep(seq("(", commaSep($._expr), ")"))),
			),

		// Renamed from _compound_operator to compound_operator (named node)
		result_column: ($) =>
			choice(
				seq(field("table", $._name), ".", "*"),
				"*",
				seq(
					field("value", $._expr),
					optional(seq(optional($.AS), field("alias", $._name))),
				),
			),

		_column_name_list: ($) => seq("(", commaSep($._name), ")"),

		from_clause: ($) => seq($.FROM, $._join_clause),

		_join_clause: ($) =>
			seq(
				$.table_or_subquery,
				repeat(
					seq(
						$.join_operator,
						$.table_or_subquery,
						optional($.join_constraint),
					),
				),
			),

		join_operator: ($) =>
			choice(
				",",
				seq(
					optional($.NATURAL),
					optional(
						choice(
							seq($.LEFT, optional($.OUTER)),
							seq($.RIGHT, optional($.OUTER)),
							seq($.FULL, optional($.OUTER)),
							$.INNER,
							$.CROSS,
						),
					),
					$.JOIN,
				),
			),

		join_constraint: ($) =>
			choice(
				seq($.ON, field("predicate", $._expr)),
				seq($.USING, "(", commaSep($._name), ")"),
			),

		table_or_subquery: ($) =>
			choice(
				// Table reference: name [AS alias] [INDEXED BY ...]
				prec.left(
					1,
					seq(
						field("name", $._name2),
						optional(seq(optional($.AS), field("alias", $._name))),
						optional(
							choice(
								seq($.INDEXED, $.BY, $._name),
								seq($.NOT, $.INDEXED),
							),
						),
					),
				),
				// Table-valued function: name(args...) [AS alias]
				prec.left(
					1,
					seq(
						field("name", $._name2),
						"(",
						commaSep($._expr),
						")",
						optional(seq(optional($.AS), field("alias", $._name))),
					),
				),
				// Subquery: (SELECT ...) [AS alias]
				prec.left(
					1,
					seq(
						"(",
						field("body", $.select_stmt),
						")",
						optional(seq(optional($.AS), field("alias", $._name))),
					),
				),
				seq("(", $._join_clause, ")"),
			),

		// Matched as a single lexer token so the parser never sees a
		// standalone ON that could be the start of upsert_clause when
		// it is actually a join_constraint inside a nested SELECT
		// (e.g. `INSERT ... SELECT ... JOIN t ON ...`). Higher token
		// precedence ensures the lexer prefers this combined match
		// whenever the full sequence is present.
		upsert_clause: ($) =>
			seq(
				$.ON_CONFLICT,
				optional(
					seq(
						"(",
						commaSep($.indexed_column),
						")",
						optional($.where_clause),
					),
				),
				$.DO,
				choice(
					$.NOTHING,
					seq(
						$.UPDATE,
						$.SET,
						commaSep(
							seq(
								choice($._name, $._column_name_list),
								"=",
								$._expr,
							),
						),
						optional($.where_clause),
					),
				),
			),
